--- a/package.json
+++ b/package.json
@@ -10,7 +10,12 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@iconify/vue": "^4.1.1",
+    "@radix-ui/colors": "^3.0.0",
+    "@radix-ui/themes": "^2.0.3",
     "nuxt": "^3.10.3",
+    "radix-ui": "^1.0.1",
+    "radix-vue": "^1.5.2",
     "vue": "^3.4.19",
     "vue-router": "^4.3.0"
   },
