--- a/package.json
+++ b/package.json
@@ -10,17 +10,20 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@csstools/normalize.css": "^12.1.1",
     "@iconify/vue": "^4.1.1",
     "@radix-ui/colors": "^3.0.0",
     "@radix-ui/themes": "^2.0.3",
     "nuxt": "^3.10.3",
     "radix-ui": "^1.0.1",
     "radix-vue": "^1.5.2",
+    "reset-css": "^5.0.2",
     "vue": "^3.4.19",
     "vue-router": "^4.3.0"
   },
   "devDependencies": {
     "@nuxtjs/google-fonts": "^3.1.3",
+    "nuxt-svgo": "^4.0.0",
     "sass": "^1.71.1"
   }
 }
