Add Slider and block information

--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "@radix-ui/colors": "^3.0.0",
     "@radix-ui/themes": "^2.0.3",
     "nuxt": "^3.10.3",
+    "nuxt-swiper": "^1.2.2",
     "radix-ui": "^1.0.1",
     "radix-vue": "^1.5.2",
     "reset-css": "^5.0.2",
+    "sanitize.css": "^13.0.0",
     "vue": "^3.4.19",
     "vue-router": "^4.3.0"
   },
