Update footer grid-template-areas

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "radix-vue": "^1.5.2",
     "reset-css": "^5.0.2",
     "sanitize.css": "^13.0.0",
+    "truncate-html": "^1.1.1",
     "vue": "^3.4.19",
     "vue-router": "^4.3.0"
   },
